filter theater list

--- a/page/view/theaters.jade
+++ b/page/view/theaters.jade
@@ -1,10 +1,9 @@
 header.screen-header
   h1.screen-title Theaters
 
-if theaters
-  div.screen-content
-    ul.theater-list
-      each theater in theaters
-        li.theater-item
-            h1.movie-title
-              a( href="/theaters/#{theater.id}" )!= theater.name
+  form#theaterFilter.screen-nav
+    input#theaterBlob( type="search" pattern=".*" required )
+    label( for="theaterBlob" ) Filter theaters
+
+div.screen-content
+  include theaters-list.jade
