--- a/style/set.styl
+++ b/style/set.styl
@@ -2,6 +2,7 @@ font-face( "ticket", "/media/font/ticketing", normal );
 
 a
    color: inherit
+   text-decoration: none
 
 button
    background: none
