update theater list and add movies and movie screen

--- a/page/view/theaters-list.jade
+++ b/page/view/theaters-list.jade
@@ -2,4 +2,4 @@ if theaters
   ul.theater-list
     each theater in theaters
       li.theater-item
-        a.movie-title( href="/theaters/#{theater.id}" )!= theater.name
+        a.item-title( href="/theaters/#{theater.id}" )!= theater.name
