--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -14,7 +14,7 @@ if theaters
         li.theater-movies-item
           article.movie
             h1.movie-title
-              a( href="/movies/#{theater.id}" )!= theater.name
+              a( href="/theaters/#{theater.id}" )!= theater.name
 
             if theater.infos
               ul.movie-infos-list
