set screen title to display on one line

--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -1,5 +1,5 @@
 header.screen-header
-  h1.screen-title!= name
+  h1( title=name ).screen-title!= name
 
   //- nav.screen-nav.nav-days
   //-   ul.nav-list
