--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -16,9 +16,13 @@
    font-weight: bold
    height: rem( 48 )
    line-height: ( 47/16 )
-   padding-left: rem( 60 )
-   text-transform: uppercase
+   overflow: hidden
    padding-bottom: rem( 1 )
+   padding-left: rem( 60 )
+   padding-right: rem( 17 )
+   text-overflow: ellipsis
+   text-transform: uppercase
+   white-space: nowrap
 
 .screen-nav
    background-color: $dark
