--- a/page/layout/default.jade
+++ b/page/layout/default.jade
@@ -11,7 +11,7 @@ html( class="no-js" lang=lang )
     //- Mobile
     meta( name="viewport" content=meta.viewport.join() )
 
-    //-include ../modules/icons
+    include ../module/favicon
 
     //- Stylesheets
     link( rel="stylesheet" href="/style.css" )
