add background color on title screens

--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -5,7 +5,7 @@
 .screen-header
    color: $light
    left: 0
-   //padding: 0 rem( 14 )
+   background-color: $dark
    position: fixed
    top: 0
    width: 100%
