--- a/style/normalize.styl
+++ b/style/normalize.styl
@@ -335,7 +335,8 @@ input[type="number"]::-webkit-outer-spin-button
  */
 
 input[type="search"]
-   -webkit-appearance: textfield /* 1 */
+   -webkit-appearance: none /* 1 */
+   border-radius: 0
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
