--- a/style/breakpoint/default/component-movie.styl
+++ b/style/breakpoint/default/component-movie.styl
@@ -1,17 +1,6 @@
-.screen-theater
-   .screen-content
-      padding: 0
-      overflow: hidden
-
-.theater-movies-item
-   margin: rem( 20 ) 0
-
-.theater-movies
-   height: 100%
-   padding: rem( 88 ) rem( 14 ) 0
-   overflow-y: scroll
-   -webkit-overflow-scrolling: touch
-
+.screen-movie
+   .theater-movies-item
+      margin: rem( 20 ) 0
 
 .movie-title
    color: $text-secondary-dark
