disable ios skin on inputs

--- a/style/normalize.styl
+++ b/style/normalize.styl
@@ -282,6 +282,10 @@ input[type="submit"]
    -webkit-appearance: button /* 2 */
    cursor: pointer /* 3 */
 
+
+input[type=text]
+   -webkit-appearance: caret
+
 /**
  * Re-set default cursor for disabled elements.
  */
@@ -306,6 +310,7 @@ input::-moz-focus-inner
 
 input
    line-height: normal
+   border-radius: 0
 
 /**
  * It's recommended that you don't attempt to style these elements.
