--- a/style/normalize.styl
+++ b/style/normalize.styl
@@ -284,7 +284,7 @@ input[type="submit"]
 
 
 input[type=text]
-   -webkit-appearance: caret
+   -webkit-appearance: none
 
 /**
  * Re-set default cursor for disabled elements.
