--- a/page/module/header.jade
+++ b/page/module/header.jade
@@ -1,4 +1,8 @@
 header( role="banner" ).site-header
+
+  h1.site-logo
+    include ../../_source/svg/logo.svg
+
   button.site-menu-button( type="button" )
     include ../../_source/svg/icon_menu.svg
     span Menu
