--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -2,25 +2,52 @@
    .screen-form
       height: rem( 36 )
 
-      .input-floating
-         font-size: rem( 14 )
-         height: rem( 32 )
-
-         input
-            border-width: 2px
-            text-align: center
-
-         label
-            line-height: ( 32/14 )
 
    .screen-content
-      padding-top: rem( 48+36 )
+      background: none
+      min-height: 0
+      padding-top: 0
+      position: fixed
+      width: 100%
+      bottom: 0
+      left: 0
+      height: auto
+
+.home-poster
+   display: block
+   width: 100%
+   height: 100%
+   background: no-repeat 50% 50%
+   background-size: cover
+
+.home-find
+   font-size: 0
+   position: relative
+   margin-bottom: rem( 25 )
+
+   &:after
+      content: ''
+      position: absolute
+      width: 1px
+      background-color: $light
+      height: rem( 26 )
+      left: 50%
+      top: rem( 15 )
+      transform: translateX( -50% )
 
 .form-quicksearch
-   margin: rem( 14 ) 0
+   color: $light
+   display: inline-block
+   font-size: rem( 12 )
+   margin: rem( 15 ) 0
+   vertical-align: top
+   width: 50%
 
    .input-floating
-      color: $dark
+      height: rem( 26 )
+
+      input
+         border-width: 0
 
       input:focus + label
          visibility: hidden
@@ -31,8 +58,6 @@
 
       button
          display: none
-         background-color: $light
-         border 3px solid currentColor
          border-left: 0
          height: 100%
          padding: 0 rem( 8 )
@@ -40,6 +65,7 @@
          right: 0
          top: 0
          z-index: 1
+
       [type=submit]
          &:focus
             display: block
