--- a/style/breakpoint/default/component-menu.styl
+++ b/style/breakpoint/default/component-menu.styl
@@ -1,7 +1,7 @@
 .site-menu
    display: none
    height: 100vh
-   position: relative
+   position: fixed
    transform: translateX( -100% )
    transition: transform 0s linear 0.4s, background 0.3s $ease-in-quad 0.1s
    z-index: 4
