--- a/style/breakpoint/default/forms.styl
+++ b/style/breakpoint/default/forms.styl
@@ -1,7 +1,14 @@
 .input-floating
    position: relative
    display: block
-   height: em( 38/16 )
+   height: em( 48/16 )
+
+   svg
+      fill: $light
+      position: absolute
+      left: 0
+      top: rem( 12 )
+
 
    label
       color: currentColor
@@ -10,16 +17,16 @@
       top: 0
       width: 100%
       z-index: 0
-      padding: 0 rem( 11 )
-      line-height: ( 38/16 )
+      padding: 0 rem( 30 )
+      line-height: ( 48/16 )
 
    input
       background: none
-      border: 3px solid currentColor
+      border: 0
       display: block
       height: 100%
       outline: none
-      padding: 0 rem( 8 )
+      padding: 0 rem( 8 ) 0 rem( 30 )
       position: relative
       width: 100%
       z-index: 1
@@ -27,11 +34,3 @@
       &:valid
          + label
             visibility: hidden
-
-.button-action
-   background-color: $dark
-   color: $light
-   display: block
-   height: rem( 40 )
-   margin: rem( 14 ) 0
-   width: 100%
