--- a/style/set.styl
+++ b/style/set.styl
@@ -10,7 +10,12 @@ button
    padding: 0
 
 body
-   background-color: $light
+   background: $color-seconday-dark url( '/media/dyn/city/paris.jpg' ) no-repeat 50% 50%
+   background-size: cover
    color: $text-primary
-   font-family: ticket
+   font-family: ticket, Courier, Georgia, Times, "Times New Roman", serif;
    font-size: 100%
+
+
+.hidden
+   hide();
