fix background display (iOS7)

--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -16,7 +16,7 @@
 .home-poster
    display: block
    width: 100%
-   height: 100%
+   height: 100vh
    background: no-repeat 50% 50%
    background-size: cover
 
