test square buttons

--- a/style/breakpoint/default/object-button.styl
+++ b/style/breakpoint/default/object-button.styl
@@ -25,12 +25,12 @@
    height: rem( 44 )
    margin: rem( 15 ) auto
    width: rem( 228 )
-   border-radius: rem( 22 )
+   //border-radius: rem( 22 )
    line-height: ( 44/14 )
    font-size: rem( 14 )
 
 .button-reverse
-   border-radius: rem( 22 )
+   //border-radius: rem( 22 )
    border: 2px solid $light
    color: $light
    display: block
