--- a/style/breakpoint/default/component-header.styl
+++ b/style/breakpoint/default/component-header.styl
@@ -10,10 +10,32 @@
 
 .site-logo
    width: rem( 70 )
-   height: rem( 32 )
-   margin: rem( 15 ) auto
+   height: rem( 62 )
+   padding: rem( 15 ) 0
+   margin: 0 auto
+
+   &.start
+      position: fixed
+      width: 100%
+      height: rem( 116 )
+      left: 0
+      top: 50%
+      transform: translateY( -50% )
+
+      .big-wheel
+         transform-origin: 186.9px 50.2px
+         animation: spin 0.5s linear infinite
+
+      .small-wheel
+         transform-origin: 202.1px 170.3px
+         animation: spin 0.4s linear infinite
 
    svg
       width: 100%
       height: 100%
       fill: $light
+
+
+
+
+
