--- a/style/set.styl
+++ b/style/set.styl
@@ -1,5 +1,11 @@
 font-face( "ticket", "/media/font/ticketing", normal );
 
+@keyframes spin
+   from
+      transform: rotate( 0 )
+   to
+      transform: rotate( 180deg )
+
 a
    color: inherit
    text-decoration: none
@@ -15,7 +21,6 @@ body
    color: $text-primary
    font-family: ticket, Courier, Georgia, Times, "Times New Roman", serif;
    font-size: 100%
-
 
 .hidden
    hide();
