--- a/style/breakpoint/default/object-button.styl
+++ b/style/breakpoint/default/object-button.styl
@@ -6,7 +6,7 @@
    position: fixed
    top: 0
    width: rem( 60 )
-   z-index: 5
+   z-index: 4
 
    svg
       fill: currentColor
@@ -17,6 +17,10 @@
 .button
    text-align: center
    text-transform: uppercase
+
+.button-close
+   outline: none
+   -webkit-tap-highlight-color: rgba( 0, 0, 0, 0 )
 
 .button-action
    background-color: $light
