--- a/style/set.styl
+++ b/style/set.styl
@@ -24,3 +24,12 @@ body
 
 .hidden
    hide();
+
+.dash
+   display: block
+   height: rem( 4 )
+   width: 100%
+
+   pattern
+      stroke: rgba( $color-primary-light, 0.4 )
+      stroke-width: 2px
