--- a/page/module/header.jade
+++ b/page/module/header.jade
@@ -3,10 +3,10 @@ header( role="banner" ).site-header
   h1.site-logo
     include ../../_source/svg/logo.svg
 
-  button.site-menu-button( type="button" )
+  button.site-menu-button( type="button" aria-controls="menu" aria-expanded="true" )
     include ../../_source/svg/icon_menu.svg
     span Menu
 
-  nav.site-menu( role="navigation" aria-hidden="true" )
+  nav#menu.site-menu( role="navigation" aria-hidden="true" )
     h1.hidden Menu
     div.menu-wrapper
