--- a/page/view/theaters.jade
+++ b/page/view/theaters.jade
@@ -5,7 +5,7 @@ header.screen-header
     span.input-floating
       include ../../_source/svg/icon_search.svg
       input#theaterBlob( type="search" pattern=".*" required value="#{screenParams.filter || ''}" )
-      label( for="theaterBlob" ) Filter theaters
+      label( for="theaterBlob" ) Search theaters
 
 div.screen-content
   include theaters-list.jade
