--- a/style/breakpoint/default/component-theater.styl
+++ b/style/breakpoint/default/component-theater.styl
@@ -17,6 +17,32 @@
    &[aria-hidden=true]
       display: none
 
+.theater-favorite
+   position: absolute
+   right: 0
+   top: 0
+   width: rem( 60 )
+   height: rem( 54 )
+
+   .button-favorite
+      width: 100%
+      height: 100%
+
+   .button-favorited
+      left: 0
+      opacity: 0
+      pointer-events: none
+      position: absolute
+      top: 0
+      transform: scale( 0.5 )
+      transition: transform 0.3s cubic-bezier(0,0,.57,2), opacity 0.15s linear
+      z-index: 1
+
+   &.favorited
+      .button-favorited
+         opacity: 1
+         pointer-events: auto
+         transform: scale( 1 )
 
 .movie
    padding-top: rem( 22 )
