--- a/style/breakpoint/default/object-button.styl
+++ b/style/breakpoint/default/object-button.styl
@@ -22,6 +22,17 @@
    outline: none
    -webkit-tap-highlight-color: rgba( 0, 0, 0, 0 )
 
+.button-favorite
+   outline: none
+
+   svg
+      fill: $color-primary
+      width: rem( 30 )
+      height: rem( 30 )
+
+   span
+      hide()
+
 .button-action
    background-color: $light
    color: $dark
