uniform list styles

--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -65,7 +65,7 @@
    padding: 0 rem( 15 )
 
 .screen-content
-   padding: rem( 48 ) rem( 20 ) 0
+   padding: rem( 54 ) rem( 20 ) 0
    //height: 100vh
    background-color: $light
    min-height: 100%
@@ -102,8 +102,12 @@
    .screen-content
       padding-top: rem( 102 )
 
+      > ul
+         padding-top: rem( 10 )
+
    .item-title
-      font-size: rem( 17 )
-      padding: rem( 15 ) 0
+      font-size: rem( 18 )
+      line-height: ( 20/18 )
+      padding: rem( 16 ) 0 rem( 14 )
       display: block
       color: $text-secondary-dark
