--- a/style/breakpoint/default/component-theater.styl
+++ b/style/breakpoint/default/component-theater.styl
@@ -1,15 +1,15 @@
 .screen-theater
    .screen-content
-      padding-top: rem( 104 )
+      padding-top: rem( 102 )
 
 .theater-movies-list
-   padding-top: rem( 4 )
    padding-bottom: rem( 10 )
 
 .theater-movies-item
    margin: rem( 24 ) 0
 
    &:first-child
+      margin-top: rem( 12 )
       .dash
          display: none
 
@@ -72,6 +72,7 @@
       width: pc( 236/320 )
 
 .movie-title
+   font-size: rem( 18 )
    margin-top: rem( -2 )
 
 .movie-infos
@@ -80,14 +81,13 @@
    vertical-align: top
 
 .movie-infos-item
-   font-size: rem( 11 )
-   margin: rem( 2 ) 0
+   font-size: rem( 12 )
 
 .movie-times
    margin-top: rem( 10 )
 
 .movie-times-info
-   font-size: rem( 12 )
+   font-size: rem( 13 )
    margin: rem( 5 ) 0 0
    display: block
 
@@ -98,7 +98,7 @@
    width: 'calc( 100% + %s )' % ( rem( 18 ) )
 
 .movie-times-item
-   font-size: rem( 14 )
+   font-size: rem( 15 )
    display: inline-block
    padding: 0 rem( 9 )
 
