add som padding at the bottom of the screen list

--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -103,6 +103,7 @@
       padding-top: rem( 102 )
 
       > ul
+         padding-bottom: rem( 16 )
          padding-top: rem( 10 )
 
    .item-title
