preload home poster

--- a/page/view/home.jade
+++ b/page/view/home.jade
@@ -1,7 +1,7 @@
-span.home-poster( aria-hidden="true" style="background-image: url(/media/dyn/home/batmanvsuperman.jpg);" )
+span.home-poster( aria-hidden="true" )
 div.screen-content
 
-  button.button.button-action( type="button" aria-label="Find theaters around me" ) Around me
+  button.button.button-action.button-around( type="button" aria-label="Find theaters around me" ) Around me
 
   a.button.button-reverse( href="/favorites" ) My favorite theaters
 
