--- a/style/breakpoint/default/component-header.styl
+++ b/style/breakpoint/default/component-header.styl
@@ -9,10 +9,12 @@
          hide()
 
 .site-logo
-   width: rem( 70 )
    height: rem( 62 )
-   padding: rem( 15 ) 0
    margin: 0 auto
+   padding: rem( 15 ) 0
+   position: relative
+   width: rem( 70 )
+   z-index: 1
 
    &.start
       position: fixed
