--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -14,11 +14,17 @@
       height: auto
 
 .home-poster
-   display: block
-   width: 100%
-   height: 100vh
    background: no-repeat 50% 50%
    background-size: cover
+   display: block
+   height: 100vh
+   opacity: 0
+   transition: opacity 0.3s $ease-out-quad;
+   width: 100%
+   will-change: opacity
+
+   &.show
+      opacity: 1
 
 .home-find
    font-size: 0
