update loader fill color

--- a/style/breakpoint/default/component-loader.styl
+++ b/style/breakpoint/default/component-loader.styl
@@ -16,12 +16,13 @@
    height: rem( 58 )
    width: rem( 30 )
 
-
    svg
+      fill: $color-secondary
       height: 100%
-      width: 100%
       transform: translateY( rem( 10 ) )
       transition: transform 0.3s $ease-out-quad
+      width: 100%
+
 .play
    .loader-wrapper
       opacity: 1
