--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -8,7 +8,7 @@
    top: 0
    width: 100%
    z-index: 2
-   background: $color-seconday-dark url( '/media/dyn/city/paris.jpg' ) no-repeat 50% 0
+   background: $color-secondary-dark url( '/media/dyn/city/paris.jpg' ) no-repeat 50% 0
    background-size: cover
 
 .screen-title
