--- a/style/settings.styl
+++ b/style/settings.styl
@@ -6,15 +6,14 @@ $color-primary-light = #b2b2b2
 $color-primary = #9c9c9c
 $color-primary-dark = #202020
 
-$color-seconday-dark = #343434
+$color-secondary = #555
+$color-secondary-dark = #343434
 
 $text-primary-light = #bbbbbb
 $text-primary = $color-primary
 $text-primary-dark = $color-primary-dark
 $text-secondary-dark = #282828
 $text-error = #ff7f7f
-
-
 
 $color-divider-light = #a5a5a5
 $color-divider-dark = #e5e5e5
