--- a/style/set.styl
+++ b/style/set.styl
@@ -16,7 +16,7 @@ button
    padding: 0
 
 body
-   background: $color-seconday-dark url( '/media/dyn/city/paris.jpg' ) no-repeat 50% 50%
+   background: $color-secondary-dark url( '/media/dyn/city/paris.jpg' ) no-repeat 50% 50%
    background-size: cover
    color: $text-primary
    font-family: ticket, Courier, Georgia, Times, "Times New Roman", serif;
